syntax = "proto3";
package services;

service StudentData {
    rpc getStudentData (GetStudentRequest) returns (GetStudentResponse);
    rpc getStudentId (GetStudentIdRequest) returns (GetStudentIdResponse);
    rpc deleteStudent (DeteleStudentRequest) returns (DeteleStudentResponse);
    rpc putStudent (PutStudentRequest) returns (PutStudentResponse);
    rpc createStudent (CreateStudentRequest) returns (CreateStudentResponse);
    rpc updateRealJson (UpdateRealJsonRequest) returns (UpdateRealJsonResponse);
}

service EmployeeData{
    rpc getEmployeeData (GetEmployeeRequest) returns (GetEmployeeResponse);
    rpc getEmployeeId (GetEmployeeIdRequest) returns (GetEmployeeIdResponse);
    rpc deleteEmployee (DeteleEmployeeRequest) returns (DeteleEmployeeResponse);
    rpc putEmployee (PutEmployeeRequest) returns (PutEmployeeResponse);
    rpc createEmployee (CreateEmployeeRequest) returns (CreateEmployeeResponse);
    rpc updateERealJson (UpdateERealJsonRequest) returns (UpdateERealJsonResponse);
}

service MasterData{
    rpc getMasterData (GetMasterRequest) returns (GetMasterResponse);
    rpc getMasterId (GetMasterIdRequest) returns (GetMasterIdResponse);
    rpc deleteMaster (DeteleMasterRequest) returns (DeteleMasterResponse);
    rpc putMaster (PutMasterRequest) returns (PutMasterResponse);
    rpc createMaster (CreateMasterRequest) returns (CreateMasterResponse);
    rpc updateMRealJson (UpdateMRealJsonRequest) returns (UpdateMRealJsonResponse);
}



// student

message GetStudentRequest {
    string stddata =  1;
   
}

message GetStudentResponse {
    int32 status =1;
    string message_key=2;
    string data =3;
}



message GetStudentIdRequest{
    uint32 id = 1;
}
message GetStudentIdResponse{
    int32 status =1;
    string message_key=2;
    string data =3;
}



message DeteleStudentRequest{
    uint32 id = 1;
}
message DeteleStudentResponse{
    int32 status =1;
    string message_key=2;
    string data =3;

}

message PutStudentRequest{
    uint32 id = 1;
    string name = 2;
    string phone = 3;
    string email = 4;
    string city = 5;
    string address = 6;
    repeated string marks = 7;
}

message PutStudentResponse{
    int32 status =1;
    string message_key=2;
    string data =3;

}

message CreateStudentRequest{
    optional uint32 id = 1;
    string name = 2;
    string phone = 3;
    string email = 4;
    string city = 5;
    string address = 6;
    repeated string marks = 7;

} 
message CreateStudentResponse{
    int32 status =1;
    string message_key=2;
    string data =3;
}

message UpdateRealJsonRequest{
    string Updateit = 1;
}

message UpdateRealJsonResponse{
    int32 status =1;
    string message_key=2;
    string data =3;
}



//  Employee


message GetEmployeeRequest {
    string empdata =  1;
   
}

message GetEmployeeResponse {
    int32 status =1;
    string message_key=2;
    string data =3;
}



message GetEmployeeIdRequest{
    uint32 id = 1;
}
message GetEmployeeIdResponse{
    int32 status =1;
    string message_key=2;
    string data =3;
}



message DeteleEmployeeRequest{
    uint32 id = 1;
}
message DeteleEmployeeResponse{
    int32 status =1;
    string message_key=2;
    string data =3;

}

message PutEmployeeRequest{
    uint32 id = 1;
    string name = 2;
    uint32 age = 3;
    repeated string skill = 4;
    optional string position = 5;
    optional uint32 exprience = 6;
    
}

message PutEmployeeResponse{
    int32 status =1;
    string message_key=2;
    string data =3;

}

message CreateEmployeeRequest{
    optional uint32 id = 1;
    string name = 2;
    uint32 age = 3;
    repeated string skill = 4;
    optional string position = 5;
    optional uint32 exprience = 6;

} 
message CreateEmployeeResponse{
    int32 status =1;
    string message_key=2;
    string data =3;
}

message UpdateERealJsonRequest{
    string Updateit = 1;
}

message UpdateERealJsonResponse{
    int32 status =1;
    string message_key=2;
    string data =3;
}


// Master



//  Employee


message GetMasterRequest {
    string mstdata =  1;
   
}

message GetMasterResponse {
    int32 status =1;
    string message_key=2;
    string data =3;
}



message GetMasterIdRequest{
    uint32 id = 1;
}
message GetMasterIdResponse{
    int32 status =1;
    string message_key=2;
    string data =3;
}



message DeteleMasterRequest{
    uint32 id = 1;
}
message DeteleMasterResponse{
    int32 status =1;
    string message_key=2;
    string data =3;

}

message PutMasterRequest{
    uint32 id = 1;
    string name = 2;
    repeated string skill = 3;
    string status = 4;
    string language = 5;
    
}

message PutMasterResponse{
    int32 status =1;
    string message_key=2;
    string data =3;

}

message CreateMasterRequest{
    optional uint32 id = 1;
    string name = 2;
    repeated string skill = 3;
    string status = 4;
    string language = 5;

} 
message CreateMasterResponse{
    int32 status =1;
    string message_key=2;
    string data =3;
}

message UpdateMRealJsonRequest{
    string Updateit = 1;
}

message UpdateMRealJsonResponse{
    int32 status =1;
    string message_key=2;
    string data =3;
}

